welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:5: error: type mismatch;
 found   : Unit
 required: Int
        if(b<=20){
        ^max1020:4: error: type mismatch;
 found   : Unit
 required: Int
      if(b>=10){
      ^max1020:3: error: type mismatch;
 found   : Unit
 required: Int
    if (a<=20){
    ^