welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = {
  if(a>=10){
    if (a<=20){
      if(b>=10){
        if(b<=20){
          if(a>b){
      			return a
    			}
    			else {
      			return b
    			}
      }
    }
    
   
 
  }
  
}
  else{ return 0}
}